--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
-language: ruby
-rvm:
-  - 2.1
-script:
-  - bundle exec jekyll build
-  - bundle exec htmlproof ./_site --only-4xx --check-favicon --check-html
-env:
-  global:
-    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+language: node_js
+node_js:
+  - '6'
+
+# fail asap when there is a failure
+matrix:
+  fast_finish: true
+
+# cache node modules
+cache:
+  directories:
+    - node_modules
