--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ deploy:
 
   # only run on one version of node (v5 here)
   on:
-    branch: master # ⚠️ OR SRC IF YOU USE USERNAME.GITHUB.IO
+    branch: development # ⚠️ OR SRC IF YOU USE USERNAME.GITHUB.IO
     node: '6'
