--- a/package.json
+++ b/package.json
@@ -75,15 +75,15 @@
     "postcss-loader": "^1.2.2",
     "postcss-reporter": "^3.0.0",
     "raw-loader": "^0.5.1",
-    "react": "^0.14.0 || ^15.0.0-rc.1",
-    "react-dom": "^0.14.0 || ^15.0.0-rc.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-helmet": "^4.0.0",
     "react-lowlight": "^1.0.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-svg-inline": "^1.1.0",
     "react-topbar-progress-indicator": "^1.0.0",
-    "redux": "^3.0.0",
+    "redux": "^3.6.0",
     "style-loader": "^0.13.1",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
